name:                timer
version:             0.1.0.0
license-file:        LICENSE
author:              RJ Regenold
maintainer:          rjregenold@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable timer
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Main.hs

  build-depends: base                 >= 4.6     && < 4.7
               , optparse-applicative >= 0.7.0.2 && < 0.8

               , text
