name:                timer
version:             0.1.0.0
license-file:        LICENSE
author:              RJ Regenold
maintainer:          rjregenold@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable timer
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Main.hs
  ghc-options:      -Wall -Werror -fno-warn-orphans

  build-depends: base                 >= 4.6     && < 4.7
               , optparse-applicative >= 0.7.0.2 && < 0.8
               , acid-state           >= 0.12.1  && < 0.13
               , errors               >= 1.4.4   && < 1.5
               , boxes                >= 0.1.3   && < 0.2

               , text
               , safecopy
               , mtl
               , directory
               , filepath
               , old-locale
               , time
